syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.lzh";
option java_outer_classname = "HelloProto";

/**
 *  IDL文件 目的 发布rpc服务，Service-》message-》    message《-
 */
message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string result = 1;
}

service HelloService{
  rpc hello(HelloRequest) returns (HelloResponse){}
}